--- a/src/components/Projects/ProjectItems/ProjectItems.css
+++ b/src/components/Projects/ProjectItems/ProjectItems.css
@@ -1,94 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.custom-col-12 {
-  position: relative;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.project-item-card {
+  border-radius: 25px;
+}
+
+.project-item-card .project-image {
   width: 100%;
+  height: auto;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
 }
 
-@media (min-width: 576px) {
-  .custom-col-sm-6 {
-    position: relative;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 50%;
-            flex: 0 0 50%;
-    width: 50%;
-  }
+.project-item-card .project-content {
+  background-color: white;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  padding: 2.5rem 0 2.5rem 0;
+  margin: auto 0;
 }
 
-@media (min-width: 1400px) {
-  .custom-col-xl-3 {
-    position: relative;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-            flex: 0 0 25%;
-    width: 25%;
-  }
+.project-item-card .project-content .project-company-name {
+  font-size: 32px;
+  font-weight: 600;
 }
 
-.projectItemContainer {
-  border-radius: 1.5rem;
+.project-item-card .project-content .project-company-info {
+  max-width: 70%;
+  margin: 0 auto;
+}
+
+.project-item-card .project-content .project-company-link {
+  background-color: transparent;
+  border: none;
+  color: #0066cc;
+}
+
+.project-item-card .project-content .project-company-link .chevron {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
   position: relative;
-  overflow: hidden;
 }
 
-.projectImage {
-  width: 100%;
-  border-radius: 1.5rem;
-  overflow: hidden;
-}
-
-.imageOverlay {
-  border-radius: 1.5rem;
-  padding: 16px;
-}
-
-.projectItemContainer .imageOverlay {
-  background: rgba(0, 0, 0, 0.7);
+.project-item-card .project-content .project-company-link .chevron::after {
+  content: "";
+  border-right: 1px solid #0066cc;
+  border-bottom: 1px solid #0066cc;
+  width: 50%;
+  height: 50%;
+  display: block;
   position: absolute;
   left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out 0s;
-  transition: all 0.4s ease-in-out 0s;
-}
-
-.projectItemContainer:hover .imageOverlay {
-  height: 100%;
-  width: 100%;
-  opacity: 1;
-}
-
-.companyDetails {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  opacity: 0;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-  z-index: 10;
-  font-family: "Ubuntu", sans-serif;
-}
-
-.companyInfo {
-  color: white;
-  padding: .5rem;
-}
-
-.projectItemContainer:hover .companyDetails {
-  top: 50%;
-  left: 50%;
-  opacity: 1;
-}
-
-.fadeInBottom {
-  top: 80%;
+  top: 65%;
+  -webkit-transform: translate(-30%, -50%) rotate(-45deg);
+  transform: translate(-30%, -50%) rotate(-45deg);
 }
 /*# sourceMappingURL=ProjectItems.css.map */
