--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.footerContainer {
-  width: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.footer-content {
   text-align: center;
-  border-top: 2px solid #83f1c5;
+  background-color: black;
+  color: white;
+  padding: 1rem 0;
 }
 
-.logoContainer {
+.footer-content .logoContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,24 +16,31 @@
           justify-content: center;
 }
 
-.taglineContainer {
-  padding: 1rem;
+.footer-content .social-icons-container {
+  width: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  font-family: "Ubuntu", sans-serif;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
 }
 
-.footerSubNotes {
+.footer-content .social-icons-container .social-icon {
+  font-size: 24px;
+  padding-right: 2rem;
+}
+
+.footer-content .social-icons-container .social-icon:last-child {
+  padding-right: 0;
+}
+
+.footer-content .footer-notes {
+  padding-top: 0.5rem;
+}
+
+.footer-content .footer-notes .footerSubNotes {
   font-size: 14px;
-  font-family: "Ubuntu", sans-serif;
 }
 /*# sourceMappingURL=Footer.css.map */
