--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,117 +1,69 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
 .heroContainer {
-  height: 90vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  font-family: "Ubuntu", sans-serif;
-  z-index: -100;
-  margin-bottom: -1rem;
+  height: calc(100vh - 75px);
+  background-color: black;
 }
 
-@media (max-width: 500px) {
-  .heroContainer {
-    height: 33vh !important;
-    margin-bottom: -0.5rem;
-  }
-}
-
-@media (min-width: 501px) and (max-width: 900px) {
-  .heroContainer {
-    height: 43vh;
-    margin-bottom: -0.5rem;
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1180px) {
-  .heroContainer {
-    height: 78vh;
-  }
-}
-
-@media (width: 1024px) {
-  .heroContainer {
-    height: 60vh;
-  }
-}
-
-@media (max-height: 400px) and (max-width: 900px) {
-  .heroContainer {
-    height: 60vh;
-  }
-}
-
-.heroText {
-  position: absolute;
-  width: 80vw;
-  top: 40%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-@media (max-width: 650px) {
-  .heroText {
-    top: 40%;
-  }
-}
-
-@media (min-width: 650px) and (max-width: 900px) {
-  .heroText {
-    top: 40%;
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1024px) {
-  .heroText {
-    top: 40%;
-  }
-}
-
-.heroText p, .heroText span {
-  font-size: 40px;
-}
-
-@media (max-width: 900px) {
-  .heroText p, .heroText span {
-    font-size: 20px;
-  }
-}
-
-@media (min-width: 901px) and (max-width: 1024px) {
-  .heroText p, .heroText span {
-    font-size: 30px;
-  }
-}
-
-.heroText span {
-  background: -webkit-linear-gradient(#83f1c5, #83f2f1);
-  background-clip: none;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.bannerImgContainer {
-  position: relative;
-  background: url(../../assets/images/bannerImage.png) no-repeat center;
-  background-size: contain;
-  background-position-y: top;
-  background-repeat: none;
-  overflow: hidden;
+.heroContainer .hero-contents {
+  display: -ms-grid;
+  display: grid;
   height: 100%;
-  width: 100%;
-  margin: 5px;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  row-gap: 15px;
 }
 
-@media (max-width: 525px) {
-  .bannerImgContainer {
-    height: 42vh;
+@media only screen and (min-width: 786px) {
+  .heroContainer .hero-contents {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
+}
+
+.heroContainer .hero-contents .hero-text {
+  margin: auto 0;
+  color: white;
+  font-weight: 600;
+}
+
+.heroContainer .hero-contents .hero-text .hero-text-eyebrow {
+  font-size: 30px;
+}
+
+.heroContainer .hero-contents .hero-text .hero-text-heading {
+  font-size: 45px;
+  font-weight: 700;
+}
+
+@media only screen and (min-width: 786px) {
+  .heroContainer .hero-contents .hero-text .hero-text-heading {
+    font-size: 60px;
+  }
+}
+
+.heroContainer .hero-contents .hero-text .hero-text-job {
+  font-size: 18px;
+}
+
+.heroContainer .hero-contents .hero-text .hero-social-icon {
+  font-size: 24px;
+  padding-right: 2rem;
+}
+
+.heroContainer .hero-contents .hero-image-container {
+  max-height: 300px;
+}
+
+@media only screen and (min-width: 786px) {
+  .heroContainer .hero-contents .hero-image-container {
+    max-height: calc(100vh - 75px);
+  }
+}
+
+.heroContainer .hero-contents .hero-image-container .hero-image {
+  width: 100%;
+  height: 100%;
 }
 
 .react-rotating-text-cursor {
