--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -1,30 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.NavigationItems {
-  margin: 0 !important;
-  padding: 0;
-  list-style: none;
-  display: inliflex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.nav-items {
+  display: none;
 }
 
-.NavigationItems i {
-  color: #83ddf1;
-  font-size: 2rem;
-}
-
-@media (min-width: 500px) {
-  .NavigationItems {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row;
-            flex-flow: row;
+@media only screen and (min-width: 786px) {
+  .nav-items {
+    display: block;
+    margin-top: 1rem;
+    padding-left: 0;
   }
+}
+
+.nav-mobile-items {
+  list-style: none;
+  padding: 0 2rem 0 2rem;
+  margin-bottom: 0;
 }
 /*# sourceMappingURL=NavigationItems.css.map */
