--- a/src/components/Projects/PersonalProjects/PersonalProjectItems/PersonalProjectItemCard/PersonalProjectItemCard.css
+++ b/src/components/Projects/PersonalProjects/PersonalProjectItems/PersonalProjectItemCard/PersonalProjectItemCard.css
@@ -1,22 +1,99 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.buttonColor {
-  color: black;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.project-item-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  row-gap: 15px;
+  padding-bottom: 15px;
 }
 
-@media (min-width: 1200px) {
-  .card-size {
-    max-width: 25%;
+@media only screen and (min-width: 786px) {
+  .project-item-container {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 15px;
+            column-gap: 15px;
   }
 }
 
-@media (min-width: 768px) {
-  .card-size {
-    max-width: 50%;
+.project-item-container:nth-child(odd) .project-item-content {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.project-item-container:nth-child(odd) .project-item-img-content {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+@media only screen and (min-width: 786px) {
+  .project-item-container:nth-child(odd) .project-item-content {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .project-item-container:nth-child(odd) .project-item-img-content {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
 
-.card-subtitle {
+.project-item-container:nth-child(even) .project-item-content {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.project-item-container:nth-child(even) .project-item-img-content {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.project-item-container .project-item-content {
+  padding: 1rem;
+}
+
+.project-item-container .project-item-content .project-item-type {
   text-transform: capitalize;
-  color: #a9a9a9;
+  color: #86868b;
+  font-weight: 600;
+}
+
+.project-item-container .project-item-content .project-item-img-type {
+  width: 25px;
+}
+
+.project-item-container .project-item-content .project-item-title {
+  font-size: 28px;
+  font-weight: 600;
+  padding-top: 0.5rem;
+}
+
+.project-item-container .project-item-content .project-item-description {
+  padding-bottom: 1rem;
+}
+
+.project-item-container .project-item-content .project-item-link {
+  padding-bottom: 0.5rem;
+}
+
+.project-item-container .project-item-content .project-item-link a {
+  text-decoration: none;
+}
+
+.project-item-container .project-item-img-content {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 25px;
+}
+
+.project-item-container .project-item-img-content .project-item-img {
+  width: 100%;
+  border-radius: 25px;
 }
 /*# sourceMappingURL=PersonalProjectItemCard.css.map */
