--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,16 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.sectionProjectsContainer {
-  width: 90vw;
-  margin: 0 auto;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.project-content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  row-gap: 15px;
+  padding-top: 2rem;
 }
 
-.customRow {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%;
+@media only screen and (min-width: 786px) {
+  .project-content {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 15px;
+            column-gap: 15px;
+  }
 }
 /*# sourceMappingURL=Projects.css.map */
