--- a/src/components/SectionHeader/SectionHeaderBGImage/SectionHeaderBGImage.css
+++ b/src/components/SectionHeader/SectionHeaderBGImage/SectionHeaderBGImage.css
@@ -1,66 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-.sectionContainer {
-  width: 100%;
-  height: 55vh;
-  background-image: -webkit-gradient(linear, right bottom, left top, from(#83f1c5), to(#83ddf1));
-  background-image: linear-gradient(to top left, #83f1c5, #83ddf1);
-}
-
-@media (max-width: 600px) and (max-height: 600px) {
-  .sectionContainer {
-    height: 100vh;
-  }
-}
-
-@media (max-width: 450px) {
-  .sectionContainer {
-    height: 65vh;
-  }
-}
-
-@media (max-height: 700px) {
-  .sectionContainer {
-    height: 75vh;
-  }
-}
-
-.sectionContent {
-  width: 70%;
-  height: 100%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+.section-header-content {
   text-align: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-family: "Ubuntu", sans-serif;
 }
 
-h1 {
-  font-size: 50px;
+.section-header-content .section-header-eyebrow {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #86868b;
 }
 
-@media (max-width: 900px) {
-  h1 {
-    font-size: 30px;
+.section-header-content .section-header-heading {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 50px;
+}
+
+@media only screen and (min-width: 786px) {
+  .section-header-content .section-header-heading {
+    font-size: 50px;
   }
 }
 
-p {
-  font-size: 20px;
-}
-
-@media (max-width: 900px) {
-  p {
-    font-size: 15px;
-  }
+.section-header-content .section-header-body {
+  max-width: 450px;
+  margin: 0 auto;
 }
 
 .bannerImage {
