--- a/src/components/Services/ServicesColumn/ServicesColumn.css
+++ b/src/components/Services/ServicesColumn/ServicesColumn.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
 .column {
   border-right: 1px solid #E6ECF8;
   padding: 1rem;
