Update to portfolio some animations

--- a/src/components/Projects/PersonalProjects/PersonalProjects.scss
+++ b/src/components/Projects/PersonalProjects/PersonalProjects.scss
@@ -5,15 +5,20 @@
     padding: 2rem 0 0.5rem 0;
     border-bottom: 1px solid black;
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-evenly;
 
     .project-button {
         background-color: transparent;
         border: none;
         text-transform: capitalize;
         color: $grayColor;
-        padding-right: 2rem;
-        &:last-child {
-            padding-right: 0;
+
+        &:focus {
+            outline: none;
+        }
+        &:focus-visible {
+            outline: #015fcc auto 1px;
         }
     }
     button.project-button.active {
