--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -22,7 +22,7 @@
                 position: relative;
                 top: 0;
                 left: 0;
-                padding-left: 1rem;
+                padding-left: 0.9rem;
                 padding-top: 1.2rem;
                 margin-bottom: 15px;
             }
@@ -36,7 +36,7 @@
                 left: 0;
                 top: 0.9rem;
                 padding: 0 0.5rem;
-
+                font-size: 14px;
                 cursor: text;
                 transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
             }
@@ -65,7 +65,7 @@
             border-radius: 10px;
             border: transparent;
             position: relative;
-            padding-left: 1rem;
+            padding-left: 0.9rem;
             padding-top: -0.5rem;
             margin-top: 20px;
             margin-left: 1px;
@@ -88,7 +88,7 @@
             left: 0;
             top: 0.9rem;
             padding: 0 0.5rem;
-
+            font-size: 14px;
             cursor: text;
             transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
         }
