--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
@@ -5,6 +5,7 @@
     padding-left: 20px;
     padding-right: 20px;
     align-items: center;
+    font-size: 12px;
 
     a {
         color: rgba(255, 255, 255, 0.85);
@@ -34,7 +35,7 @@
 }
 .nav-button {
     background-color: white;
-    height: 40px;
+    height: 25px;
     border-radius: 30px;
     margin-left: 1rem;
     a {
