--- a/src/components/Navigation/NavigationItems/NavigationItems.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItems.scss
@@ -4,13 +4,13 @@
     display: none;
     @media only screen and (min-width: $breakpoint-md) {
         display: block;
-        margin-top: 1rem;
         padding-left: 0;
+        margin-bottom: 0;
     }
 }
 
 .nav-mobile-items {
     list-style: none;
-    padding: 0 2rem 0 2rem;
+    padding: 0 2rem 0.5rem 2rem;
     margin-bottom: 0;
 }
